# GreenIndex

./: .gitignore  .vercelignore  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: greenindex.yml
api/: index.py
examples/sample_project/: Dockerfile  docker-compose.yml  etl.py  queries.sql  requirements.txt  settings.py  styles.css  widget.js
greenindex/: __init__.py  __main__.py  analyzer.py  cli.py  report.py  rules.py  scoring.py  textutils.py
greenindex/web/: __init__.py  app.py  fetch.py  stats.py
greenindex/web/static/: style.css
greenindex/web/templates/: base.html  index.html  report.html  rules.html
tests/: test_analyzer.py  test_fix_guides.py  test_integration.py  test_new_rules.py  test_scoring.py  test_textutils.py  test_web.py
